Add book-correct accounting and the monthly DTE-based calendar roll (phase 3).
LONG_MONTHLY accounting: expected PnL = (qty/2) x spot points (futures-
equivalent capture scale, 2 monthly lots ~ delta 1) and WIN/LOSS from net
rupee PnL instead of spot-points sign (theta can turn a points winner into
a rupee loser). Weekly synthetic accounting unchanged. Monthly closes flow
through the account capital chain but skip the weekly-margin lot sizing;
null/zero definedRiskPerLot no longer poisons possibleLots.

MonthlyRollService: NFO dump cached once per IST day; monthly expiry =
latest NIFTY option expiry per calendar month; symbol prefix derived by
cutting the exchange strike+type off a real tradingsymbol (verified by
reconstruction, never digit regex); DTE>=10 rule promotes the MONTHLY
symbol row daily at 08:40 IST, before every monthly open, and via
/api/monthly-roll-check. Promotion never touches an open position.
NIFTY27-30 prefix filter replaced with an expiry-horizon filter; mock
gateway fabricates a realistic 10-expiry chain. Trade log gains a book
filter, equity curve a book selector; NRML cost stats exclude monthly rows.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>